# aethercore

./: .gitignore  .golangci.yml  AETHERCORE_WHITEPAPER.md  ARCHITECTURE.md  AUTH_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  V1_LAUNCH_PLAN.md  bench_results.txt  commit_wrapper.sh  coverage  fix_lint.py  fix_lint.sh  go.mod  lint.txt  lint_results.txt  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml
.jules/: sentinel.md
api_docs/: README.md
benchmarks/: .gitkeep  README.md
cmd/aether/: auth.go  discord.go  gateway.go  main.go  scaffold.go  telegram.go
core/: auth.go  event_loop.go  event_loop_bench_test.go  event_loop_react_test.go  event_loop_test.go  ipc_client.go  ipc_client_test.go  llm.go  logger.go  logger_test.go  mesh_timeout.go  mock_ollama.go  mtls.go  telemetry.go  telemetry_test.go  tool.go  tool_test.go  verified_tool.go
core/audit/: chain.go  chain_test.go  event.go  local_appender.go  local_appender_test.go  logger.go
core/ipc/: ipc.pb.go
core/llm/: cost_router.go  cost_router_test.go  doc.go  fallback_router_test.go  ollama_adapter.go  (+6 more)
docs/: architecture.md  security.md
examples/: .gitkeep
kernel/: .gitkeep
memory/: signed_store.go  vector_store.go  vector_store_test.go
modules/: .gitkeep
plugins/: .gitkeep
proto/: ipc.proto
runtime/: Cargo.toml  README.md  build.rs  manifest.toml
runtime/src/: ipc.rs  main.rs  manifest.rs  sandbox.rs  wasm_engine.rs
scripts/: benchmark.sh  e2e_validate.sh
sdk/: context.go  lifecycle.go  module.go  registry.go  sdk_test.go
(+52 files in other folders)
