[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization (Removes dead code across crates)
codegen-units = 1   # Maximum optimization at the cost of slower compile times
panic = "abort"     # Remove panic unwinding (reduces size)
strip = true        # Strip symbols from the binary
